# Pyramid

./: .gitignore  CMakeLists.txt  run.bat  spirv.bat
include/: wnd.h
include/basilisk/: basilisk.h  bs_audio.h  bs_cmds.h  bs_core.h  bs_ini.h  bs_json.h  bs_math.h  bs_mem.h  bs_models.h  bs_shaders.h  bs_textures.h  bs_ttf.h  bs_types.h
src/: main.c  wnd.c
src/bs/: bs_audio.c  bs_cmds.c  bs_core.c  bs_ini.c  bs_json.c  bs_math.c  bs_mem.c  bs_models.c  bs_shaders.c  bs_textures.c  bs_ttf.c
